WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
122834
[GStreamer] video info unset if upstream doesn't query allocation
https://bugs.webkit.org/show_bug.cgi?id=122834
Summary
[GStreamer] video info unset if upstream doesn't query allocation
Philippe Normand
Reported
2013-10-15 08:16:26 PDT
This can happen if the pipeline doesn't have a video decoder (ex: v4l2src ! sink)
Attachments
patch
(2.00 KB, patch)
2013-10-15 08:36 PDT
,
Philippe Normand
gustavo
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2013-10-15 08:36:07 PDT
Created
attachment 214263
[details]
patch
Gustavo Noronha (kov)
Comment 2
2013-10-16 01:33:35 PDT
Comment on
attachment 214263
[details]
patch Is the additional newline intended?
Philippe Normand
Comment 3
2013-10-16 01:38:32 PDT
(In reply to
comment #2
)
> (From update of
attachment 214263
[details]
) > Is the additional newline intended?
It is not! I fixit before laundry. Thanks!
Philippe Normand
Comment 4
2013-10-16 02:17:26 PDT
Committed
r157506
: <
http://trac.webkit.org/changeset/157506
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug