[GStreamer] video info unset if upstream doesn't query allocation https://bugs.webkit.org/show_bug.cgi?id=122834

Reviewed by Gustavo Noronha Silva.

* platform/graphics/gstreamer/VideoSinkGStreamer.cpp:
(webkitVideoSinkRender): If the sink didn't process any allocation
query then use the configured source pad caps and don't rely on
invalid video info.

Canonical link: https://commits.webkit.org/140971@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@157506 268f45cc-cd09-0410-ab3c-d52691b4dbfc